# aicx-callbot

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_callbot_membership_silent_transfer.py  0002_traces_bigint.py  0003_aicc909_logging_observability.py  0003_traces_bigint.py  0004_aicc910_callbot_voice_fields.py  0004_tags_call_tags_bot_tag_policies.py  0005_aicc909_logging_observability.py  0006_aicc910_callbot_voice_fields.py
backend/scripts/: _validate_alembic_async.py  e2e_gen_fixtures.py  e2e_seed.py  e2e_voice_sim.py  e2e_voice_verify.py  poc_genai_stream_tool.py  poc_genai_tool_loop.py
backend/src/: app.py
backend/src/api/: README.md  schemas.py
backend/src/application/: README.md  bot_service.py  callbot_service.py  knowledge_service.py  mcp_client.py  mcp_server_service.py  mentions.py  post_call.py  skill_runtime.py  skill_service.py  tag_service.py  tenant_service.py  tool_runtime.py  tool_service.py  tracer.py  voice_session.py
backend/src/core/: config.py  logging.py
backend/src/domain/: README.md  bot.py  call_session.py  callbot.py  entities.py  knowledge.py  (+10 more)
backend/tests/: conftest.py  test_aicc_910.py  test_call_tagging.py  test_callbot.py  test_document_processor.py  test_flow_transfer.py  test_global_rule.py  test_logging_observability.py  test_prefetch_runtime.py  test_smoke.py  test_streaming_turn.py  test_tool_loop_native.py  test_variable_context.py
(+154 files in other folders)
